--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -97,7 +97,7 @@
         cancel_my_account: アカウント削除
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         edit_account: アカウント編集
-        leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
+        leave_blank_if_you_don_t_want_to_change_it: 空欄の場合、変更しません
         title: "%{resource}編集"
         unhappy: 気に入りません
         update: 更新
