--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -1,3 +1,4 @@
+ja:
   activerecord:
     attributes:
       user:
@@ -9,7 +10,7 @@
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
         email: Eメール
-        name: ユーザー名
+        name: ニックネーム
         name_id: ユーザーID
         encrypted_password: 暗号化パスワード
         last_sign_in_at: 最終ログイン時刻
